[project]
name = "recolor"
description = "Precise LAB color recoloring tools for ComfyUI with single-zone, multi-zone, and batch processing capabilities for product images."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["scikit-image>=0.21.0", "opencv-python>=4.8.0", "numpy>=1.24.0", "torch>=2.0.0", "Pillow>=10.0.0"]

[project.urls]
Repository = "https://github.com/benjamin-bertram/ComfyUI-Recolor"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/benjamin-bertram/ComfyUI-Recolor/wiki"
"Bug Tracker" = "https://github.com/benjamin-bertram/ComfyUI-Recolor/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Recolor"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

